<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoadingActivity">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/please_wait"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</LinearLayout>